# bluez-lib

./: CMakeLists.txt
include/: bluez-adapter.h  bluez-common.h  bluez-device.h  bluez-manager.h  bluez-service.h
src/: bluez-adapter.c  bluez-common.c  bluez-device.c  bluez-manager.c  bluez-service.c
test/: CMakeLists.txt  log.h  main.c
