CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("BlueZ-Lib" C)

SET(BLUEZ_LIB "bluez-lib")

SET(SOURCE_BLUEZ_LIB
	src/bluez-manager.c
	src/bluez-common.c
	src/bluez-adapter.c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
			${CMAKE_CURRENT_SOURCE_DIR}/src)

INCLUDE(FindPkgConfig)
pkg_check_modules(PKG_MODULES REQUIRED
			glib-2.0
			gio-2.0
			gobject-2.0)

FOREACH(flag ${PKG_MODULES_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${EXTRA_CFLAGS} -Wall -Werror -g -fPIC")

ADD_LIBRARY(${BLUEZ_LIB} SHARED ${SOURCE_BLUEZ_LIB})
TARGET_LINK_LIBRARIES(${BLUEZ_LIB} ${PKG_MODULES_LDFLAGS})
#SET_TARGET_PROPERTIES(${BLUEZ_LIB} PROPERTIES PREFIX "")

ADD_SUBDIRECTORY(test)
