CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(bluez-lib-test C)

SET(BLUEZ_LIB_TEST "bluez-lib-test")

SET(SOURCE_BLUEZ_LIB_TEST
	main.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
			${CMAKE_CURRENT_SOURCE_DIR}/../include
			${CMAKE_CURRENT_SOURCE_DIR}/src)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-rpath=${CMAKE_CURRENT_SOURCE_DIR}/../")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -Werror -g")

ADD_EXECUTABLE(${BLUEZ_LIB_TEST} ${SOURCE_BLUEZ_LIB_TEST})
TARGET_LINK_LIBRARIES(${BLUEZ_LIB_TEST} ${PKG_MODULES_LDFLAGS}
				-L${CMAKE_CURRENT_SOURCE_DIR}/../ -lbluez-lib)
